# timeworks

./: pyproject.toml  test.ipynb
src/timeworks/: __init__.py
src/timeworks.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/timeworks/data/: __init__.py  dataset_config.py  load_data.py
src/timeworks/evaluate/: evaluate.py
src/timeworks/metrics/: error_measure.py
src/timeworks/preprocessing/: __init__.py  drop_plat.py  lipschitz.py  tfb.py
src/timeworks/utils/: __init__.py  cprint.py
src/timeworks/vis/: plot.py  scatter.py
